syntax = "proto3";

package mule.v1;

option go_package = "github.com/mule-ai/mom/lib/proto";

// MuleService provides gRPC endpoints for Mule functionality
service MuleService {
  // GetHeartbeat returns a simple heartbeat to check if the service is alive
  rpc GetHeartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // ListWorkflows returns all available workflows
  rpc ListWorkflows(ListWorkflowsRequest) returns (ListWorkflowsResponse);
  
  // ListProviders returns all genAI providers
  rpc ListProviders(ListProvidersRequest) returns (ListProvidersResponse);
  
  // ListAgents returns all available agents
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);
  
  // ExecuteWorkflow starts a new workflow execution
  rpc ExecuteWorkflow(ExecuteWorkflowRequest) returns (ExecuteWorkflowResponse);
}

// Heartbeat messages
message HeartbeatRequest {}

message HeartbeatResponse {
  string status = 1;
  int64 timestamp = 2;
  string version = 3;
}

// Provider messages
message ListProvidersRequest {}

message ListProvidersResponse {
  repeated Provider providers = 1;
}

message Provider {
  string name = 1;
}

// Workflow messages
message ListWorkflowsRequest {}

message ListWorkflowsResponse {
  repeated Workflow workflows = 1;
}

message Workflow {
  string id = 1;
  string name = 2;
  string description = 3;
  bool is_default = 4;
}

// Agent messages
message ListAgentsRequest {}

message ListAgentsResponse {
  repeated Agent agents = 1;
}

message Agent {
  int32 id = 1;
  string name = 2;
  string provider_name = 3;
  string model = 4;
  string prompt_template = 5;
  string system_prompt = 6;
  repeated string tools = 7;
}

// Execute workflow messages
message ExecuteWorkflowRequest {
  string workflow_name = 1;
  string prompt = 2;
  string path = 3;
}

message ExecuteWorkflowResponse {
  string execution_id = 1;
  string status = 2;
  string message = 3;
}